@@ -44,6 +44,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Removed / runtime requires]
  - Dist::Zilla::Util::ConfigDumper
 
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003001
+
 0.002001 2014-12-14T07:19:50Z
  [Added / configure requires]
  - perl 5.006
