@@ -3,13 +3,14 @@ Release history for Dist-Zilla-Plugin-INI-Baked
 {{$NEXT}}
  - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
  - Remove use of ConfigDumper util
+ - Remove use of Test::KENTNL
 
  [Dependencies::Stats]
  - Dependencies changed since 0.002001, see misc/*.deps* for details
  - configure: (recommends: ↓1)
  - develop: +8 ↑4 -1 (recommends: ↓1, suggests: ↑2)
  - runtime: -1 (recommends: +2)
- - test: ↓1 (recommends: ↓2)
+ - test: ↓1 -1 (recommends: ↓2)
 
 0.002001 2014-12-14T07:19:50Z a292fd7
  [Bugfix]
